--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MIDI Sampler – Browser</title>
-  <meta name="description" content="Mapeie notas MIDI para tocar seus próprios áudios no navegador. Funciona em HTTPS (GitHub Pages)." />
+  <meta name="description" content="Mapeie notas MIDI para tocar seus próprios áudios no navegador." />
   <style>
     :root {
       --bg: #0b1020;
