--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section class="card" id="gate">
       <div class="row" style="align-items:flex-start">
         <div class="grow">
-          <div class="status" id="status">Permissão MIDI necessária. Disponível apenas em HTTPS (ex.: GitHub Pages).</div>
+          <div class="status" id="status">Permissão MIDI necessária.</div>
           <div class="hint">Conecte seu controlador MIDI e clique em <b>Ativar MIDI</b>. Clique em <b>Desmutar Áudio</b> após a primeira interação.</div>
         </div>
         <div class="row">
